--- a/principal.html
+++ b/principal.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <title>PDV D.B.S</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://example.com/css/main.css">
+    <script type="text/javascript" src="https://example.com/js/main.js"></script>
+    <A HREF="https://www.somesite.com"><IMG SRC="https://www.example.com/logo.jpg" alt="Logo"></a>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <style>
 .icones-sociais{
